update board.css to use margin instead of padding for pieces because I dont need the piece to be bigger I need the spacing to change, updates pieceMovement.js because evaluating a null object was not coming out less than 0, updates exercise show.html.erb to address spacing issue from bootstrap (using sm and md cols)

--- a/app/assets/stylesheets/theboard.css
+++ b/app/assets/stylesheets/theboard.css
@@ -29,7 +29,7 @@
 }
 .piece {
   font-size:38px;
-  padding-left: 9.5px; 
+  margin-left: 10px; 
   position:absolute;
   text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
  }
@@ -68,7 +68,7 @@
   }
   .piece {
     font-size:48px;
-    padding-left: 12px;
+    margin-left: 12px;
   }
 
 }
@@ -96,7 +96,7 @@
   }
   .piece {
     font-size:28px;
-    padding-left: 7px; /*padding-top: 11px;*/
+    margin-left: 7px;
   }
 
 }
@@ -132,7 +132,7 @@
   }
   .piece {
     font-size:18px;
-    padding-left: 4.5px; /*padding-top: 3px;*/
+    margin-left: 4.5px;
   }
 }
 
